[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/InteractiveConsole.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/ships/ShipDesignPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/edit/FleetEditor.gd" type="Script" id=3]
[ext_resource path="res://ui/red-x-24.png" type="Texture" id=4]
[ext_resource path="res://ui/edit/IDNamePopup.tscn" type="PackedScene" id=5]

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
IDNamePopup = ExtResource( 5 )
remove_item_texture = ExtResource( 4 )

[node name="Split" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="GridContainer" parent="Split"]
margin_right = 506.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="GridContainer" parent="Split/Left"]
margin_right = 506.0
margin_bottom = 20.0
size_flags_horizontal = 3
columns = 2

[node name="FleetLabel" type="Label" parent="Split/Left/Buttons"]
margin_top = 3.0
margin_right = 39.0
margin_bottom = 17.0
text = "Fleets"

[node name="AddFleet" type="Button" parent="Split/Left/Buttons"]
margin_left = 43.0
margin_right = 116.0
margin_bottom = 20.0
grow_horizontal = 0
text = "Add Fleet"

[node name="Tree" type="Tree" parent="Split/Left"]
margin_top = 24.0
margin_right = 506.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
hide_root = true

[node name="Right" type="VSplitContainer" parent="Split"]
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Info" parent="Split/Right" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 506.0
margin_bottom = 294.0
initial_bbcode = ""
allow_input = false

[node name="Designs" parent="Split/Right" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 306.0
margin_right = 506.0
margin_bottom = 600.0
show_Change = false
show_Remove = false
show_Cancel = false
[connection signal="pressed" from="Split/Left/Buttons/AddFleet" to="." method="_on_AddFleet_pressed"]
[connection signal="button_pressed" from="Split/Left/Tree" to="." method="_on_Tree_button_pressed"]
[connection signal="item_edited" from="Split/Left/Tree" to="." method="_on_Tree_item_edited"]
[connection signal="item_selected" from="Split/Left/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="nothing_selected" from="Split/Left/Tree" to="." method="_on_Tree_nothing_selected"]
[connection signal="add" from="Split/Right/Designs" to="." method="_on_Designs_add"]
[connection signal="deselect" from="Split/Right/Designs" to="." method="_on_Designs_deselect"]
[connection signal="open" from="Split/Right/Designs" to="." method="_on_Designs_open"]
[connection signal="select" from="Split/Right/Designs" to="." method="_on_Designs_select"]
[connection signal="select_nothing" from="Split/Right/Designs" to="." method="_on_Designs_select_nothing"]
